--- a/en/index.html
+++ b/en/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href="/dist/tailwind.css" rel="stylesheet" />
-    <link href="/styles.css" rel="stylesheet" />
+    <link href="../dist/tailwind.css" rel="stylesheet" />
+    <link href="../styles.css" rel="stylesheet" />
   </head>
   <body class="scroll-smooth">
     <section id="nav" class="pb-16">
@@ -19,12 +19,12 @@
               <!-- Mobile menu button-->
               <button
                 type="button"
-                class="inline-flex items-center justify-center p-2 text-gray-700 hover:bg-opacity-90 hover:bg-black hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+                class="inline-flex items-center justify-center p-2 text-gray-700 hover:bg-opacity-90 hover:bg-black  hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                 aria-controls="mobile-menu"
                 aria-expanded="false"
                 onclick="toggleMenu()"
               >
-                <span class="sr-only">Otwórz menu główne</span>
+                <span class="sr-only">Open main menu</span>
                 <svg
                   class="block h-6 w-6"
                   fill="none"
@@ -73,27 +73,21 @@
                     href="#about"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     aria-current="page"
-                    >O mnie</a
+                    >About me</a
                   >
                   <a
                     href="#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Kontakt</a
+                    >Contact</a
                   >
                 </div>
               </div>
             </div>
             <div>
-              <a
-                href=""
-                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline mr-4 uppercase"
-              >
+              <a href="../index.html" class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase">
                 pl
               </a>
-              <a
-                href="./en/index.html"
-                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase"
-              >
+              <a href="" class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline uppercase">
                 en
               </a>
             </div>
@@ -113,13 +107,13 @@
               href="#about"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
-              >O mnie</a
+              >About me</a
             >
             <a
               href="#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
-              >Kontakt</a
+              >Contact</a
             >
           </div>
         </div>
@@ -135,35 +129,35 @@
           <a href="portfolio/kraszewskiego.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="./assets/kraszewskiego/kraszewskiego.png"
+              src="../assets/kraszewskiego/kraszewskiego.png"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/urban.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="./assets/urban/main.jpg"
+              src="../assets/urban/main.jpg"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/industrial.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="./assets/industrial/main.jpg"
+              src="../assets/industrial/main.jpg"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/pool.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="./assets/pool/pool.jpg"
+              src="../assets/pool/pool.jpg"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/stable.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="./assets/stable/1.png"
+              src="../assets/stable/1.png"
           /></a>
         </div>
         <div></div>
@@ -171,7 +165,7 @@
           <a href="portfolio/kindergarten.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="./assets/kindergarten/main.jpg"
+              src="../assets/kindergarten/main.jpg"
           /></a>
         </div>
       </div>
@@ -184,13 +178,13 @@
           class="flex-col-reverse items-center md:flex-row flex md:items-end justify-center"
         >
           <div class="text-center md:text-left md:mr-14">
-            <h1 class="text-4xl font-semibold mb-3">Zuzanna Kuszyk</h1>
+            <h1 class="text-4xl font-semibold mb-3">Hi, I am Zuzanna</h1>
             <p class="max-w-sm">
               Aspiring architect delivering cutting-edge exterior and interior
               projects.
             </p>
           </div>
-          <img src="assets/photo.jpg" class="mb-4 md:h-64 md:w-64" />
+          <img src="../assets/photo.jpg" class="mb-4 md:h-64 md:w-64" />
         </div>
       </div>
     </section>
@@ -202,7 +196,7 @@
         <div>
           <div class="px-4 sm:px-0">
             <h3 class="text-base font-semibold leading-7 text-gray-900">
-              Doświadczenie
+              Experience
             </h3>
           </div>
           <div class="mt-6 border-t border-gray-900">
@@ -210,7 +204,7 @@
               <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
                 <dt>
                   <h3 class="text-sm font-medium leading-6 text-gray-900">
-                    Asystent architekta
+                    Architect's assistant
                   </h3>
                   <div class="text-sm text-gray-700">
                     <div>09.2021 - 12.2022</div>
@@ -233,14 +227,14 @@
                   </h3>
                   <div class="text-sm text-gray-700">
                     <div>03.2021 - 09.2021</div>
-                    <div>Różni klienci</div>
+                    <div>Various clients</div>
                   </div>
                 </dt>
                 <dd
                   class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"
                 >
-                  Tworzenie wizualizacji i inwentaryzacji. Wykonywanie rysunków
-                  technicznych elementów metalowych dla firmy budowlanej.
+                  Creating visualizations and inventory of buildings. Creating
+                  technical drawings for a metallurgical company.
                 </dd>
               </div>
             </dl>
@@ -257,36 +251,37 @@
               <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
                 <dt>
                   <h3 class="text-sm font-medium leading-6 text-gray-900">
-                    Studia inżynierskie na kierunku architektura
+                    Engineering Studies in Architecture
                   </h3>
                   <div class="text-sm text-gray-700">
                     <div>2019-2023</div>
-                    <div>Politechnika Poznańska</div>
+                    <div>Poznań University of Technology</div>
                   </div>
                 </dt>
                 <dd
                   class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"
                 >
-                  Studia zakończone z maksymalną oceną równą 5. Praca
-                  inżynierska pod tytułem "Budynek mieszkalny wielorodzinny, z
-                  usługami w parterze, na ulicy Kraszewskiego 28" nominowana do
-                  konkursu na najlepszą pracę inżynierską.
+                  Final result: Engineering studies completed with a maximum
+                  score of 5 Final Year Dissertation titled: Multi-family
+                  residential building with services on the ground floor at
+                  Kraszewskiego Street, nominated for the competition for the
+                  best thesis project.
                 </dd>
               </div>
               <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
                 <dt>
                   <h3 class="text-sm font-medium leading-6 text-gray-900">
-                    Studia magisterskie na kierunku architektura
+                    Master Studies in Architecture
                   </h3>
                   <div class="text-sm text-gray-700">
                     <div>2023</div>
-                    <div>Politechnika Poznańska</div>
+                    <div>Poznań University of Technology</div>
                   </div>
                 </dt>
                 <dd
                   class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0"
                 >
-                  W trakcie
+                  Ongoing
                 </dd>
               </div>
             </dl>
@@ -295,7 +290,7 @@
         <div>
           <div class="px-4 sm:px-0">
             <h3 class="text-base font-semibold leading-7 text-gray-900">
-              Załączniki
+              Attachments
             </h3>
           </div>
           <div class="mt-6 border-t border-gray-900">
@@ -331,7 +326,7 @@
                       <a
                         href="#"
                         class="font-medium text-gray-600 hover:text-gray-500"
-                        >Pobierz</a
+                        >Download</a
                       >
                     </div>
                   </li>
@@ -359,7 +354,7 @@
                       <a
                         href="#"
                         class="font-medium text-gray-600 hover:text-gray-500"
-                        >Pobierz</a
+                        >Download</a
                       >
                     </div>
                   </li>
@@ -390,7 +385,7 @@
                         <span
                           href="#"
                           class="font-medium text-gray-600 hover:text-gray-500"
-                          >Pobierz</span
+                          >Download</span
                         >
                       </div>
                     </a>
@@ -406,7 +401,7 @@
     <div class="container border-t border-black md:mt-8 m-auto">
       <section id="contact" class="container m-auto py-8 md:py-20">
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
-          <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
+          <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
           <div class="text-center md:text-left">
             <div class="mb-2">Email: email@email.com</div>
             <div class="mb-2">Linkedin: email@email.com</div>
@@ -414,13 +409,13 @@
           </div>
         </div>
       </section>
-
+  
       <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
         <span class="w-full" id="footer"></span>
       </footer>
     </div>
     <!-- contact -->
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
