--- a/en/portfolio/kindergarten.html
+++ b/en/portfolio/kindergarten.html
@@ -66,23 +66,18 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                    href="./index.html#portfolio"
+                    href="../index.html#portfolio"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Portfolio</a
                   >
                   <a
-                    href="./index.html#about"
+                    href="../index.html#about"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     aria-current="page"
                     >About me</a
                   >
                   <a
-                    href="./index.html#resume"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Resume</a
-                  >
-                  <a
-                    href="./index.html#contact"
+                    href="../index.html#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Contact</a
                   >
@@ -96,23 +91,18 @@
         <div class="sm:hidden hidden" id="mobile-menu">
           <div class="space-y-1 px-2 pb-3 pt-2">
             <a
-              href="./index.html#portfolio"
+              href="../index.html#portfolio"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               >Portfolio</a
             >
             <a
-              href="./index.html#about"
+              href="../index.html#about"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               aria-current="page"
               >About me</a
             >
             <a
-              href="./index.html#resume"
-              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-              >Resume</a
-            >
-            <a
-              href="./index.html#contact"
+              href="../index.html#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               >Contact</a
             >
@@ -149,12 +139,13 @@
               design process and the final form of the building.
             </p>
           </div>
-          <img src="./assets/pool/aksonometria.jpg" />
+          <img src="../assets/pool/aksonometria.jpg" />
           <h2 class="uppercase text-lg text-left w-full">Site analysis</h2>
           <div class="flex gap-1"></div>
-          <img src="./assets/pool/pool.jpg" />
+          <img src="../assets/pool/pool.jpg" />
         </div>
       </div>
     </section>
+    
   </body>
 </html>
