--- a/portfolio/kraszewskiego.html
+++ b/portfolio/kraszewskiego.html
@@ -66,23 +66,18 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                    href="./index.html#portfolio"
+                    href="../index.html#portfolio"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Portfolio</a
                   >
                   <a
-                    href="./index.html#about"
+                    href="../index.html#about"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     aria-current="page"
                     >About me</a
                   >
                   <a
-                    href="./index.html#resume"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Resume</a
-                  >
-                  <a
-                    href="./index.html#contact"
+                    href="../index.html#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Contact</a
                   >
@@ -96,23 +91,18 @@
         <div class="sm:hidden hidden" id="mobile-menu">
           <div class="space-y-1 px-2 pb-3 pt-2">
             <a
-              href="./index.html#portfolio"
+              href="../index.html#portfolio"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               >Portfolio</a
             >
             <a
-              href="./index.html#about"
+              href="../index.html#about"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               aria-current="page"
               >About me</a
             >
             <a
-              href="./index.html#resume"
-              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-              >Resume</a
-            >
-            <a
-              href="./index.html#contact"
+              href="../index.html#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               >Contact</a
             >
@@ -172,7 +162,7 @@
               Axonometric
             </h2>
             <img
-              src="./assets/Kraszewskiego28/AKSONOMETRIA.jpg"
+              src="../assets/kraszewskiego/AKSONOMETRIA.jpg"
             />
           </div>
 
@@ -190,7 +180,7 @@
               </h3>
               <img
                 class="pt-1"
-                src="./assets/Kraszewskiego28/-1-1.jpg"
+                src="../assets/kraszewskiego/-1-1.jpg"
               />
             </div>
             <div>
@@ -202,7 +192,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="./assets/Kraszewskiego28/0-1.jpg"
+                src="../assets/kraszewskiego/0-1.jpg"
               />
             </div>
             <div>
@@ -214,7 +204,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="./assets/Kraszewskiego28/+1-1.jpg"
+                src="../assets/kraszewskiego/+1-1.jpg"
               />
             </div>
             <div>
@@ -226,7 +216,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="./assets/Kraszewskiego28/4-1.jpg"
+                src="../assets/kraszewskiego/4-1.jpg"
               />
             </div>
           </div>
@@ -239,7 +229,7 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="./assets/Kraszewskiego28/detail.jpg"
+              src="../assets/kraszewskiego/detail.jpg"
             />
           </div>
           <div class="pb-4">
@@ -251,17 +241,17 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="./assets/Kraszewskiego28/kraszewskiego.png"
+              src="../assets/kraszewskiego/kraszewskiego.png"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="./assets/Kraszewskiego28/bird.jpg"
+              src="../assets/kraszewskiego/bird.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="./assets/Kraszewskiego28/inside.jpg"
+              src="../assets/kraszewskiego/inside.jpg"
             />
           </div>
           <div class="pb-4">
@@ -273,16 +263,32 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="./assets/Kraszewskiego28/model1.jpg"
+              src="../assets/kraszewskiego/model1.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="./assets/Kraszewskiego28/model2.jpg"
+              src="../assets/kraszewskiego/model2.jpg"
             />
           </div>
         </div>
       </div>
     </section>
+    <div class="container border-t border-black md:mt-8 m-auto">
+      <section id="contact" class="container m-auto py-8 md:py-20">
+        <div class="flex md:justify-evenly flex-col items-center md:flex-row">
+          <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
+          <div class="text-center md:text-left">
+            <div class="mb-2">Email: email@email.com</div>
+            <div class="mb-2">Linkedin: email@email.com</div>
+            <div class="mb-2">Poznań</div>
+          </div>
+        </div>
+      </section>
+  
+      <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
+        <span class="w-full" id="footer"></span>
+      </footer>
+    </div>
   </body>
 </html>
